crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__parse_django_block.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: ast
---
nodes:
  - Django:
      Tag:
        kind: If
        bits:
          - if
          - user.is_staff
        children:
          - Text: Admin
