crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__parse_django_variable.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: ast
---
nodes:
  - Django:
      Variable:
        bits:
          - user
          - name
        filters:
          - name: default
            arguments:
              - Anonymous
          - name: title
            arguments: []
