crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__parse_for_empty_tag.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: ast
---
nodes:
  - Django:
      Tag:
        kind:
          name: for
          spec_path: django.template.defaulttags.for
          is_intermediate_of: ~
        bits:
          - for
          - item
          - in
          - items
        children:
          - Django:
              Variable:
                bits:
                  - item
                filters: []
          - Django:
              Tag:
                kind:
                  name: empty
                  spec_path: django.template.defaulttags.for
                  is_intermediate_of: for
                bits:
                  - empty
                children: []
          - Text: No items!
