crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__parse_html_doctype.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: ast
---
nodes:
  - Html:
      Doctype: "!DOCTYPE"
