crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__parse_html_tag.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: ast
---
nodes:
  - Html:
      Element:
        tag_name: div
        attributes:
          class:
            Value: container
          disabled: Boolean
          id:
            Value: main
        children: []
