crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__parse_html_void.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: ast
---
nodes:
  - Html:
      Void:
        tag_name: img
        attributes:
          src:
            Value: example.png
