crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__parse_if_tag.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: ast
---
nodes:
  - Django:
      Tag:
        kind:
          name: if
          spec_path: django.template.defaulttags.if
          is_intermediate_of: ~
        bits:
          - if
          - condition
        children:
          - Text: content
