crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__parse_style.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: ast
---
nodes:
  - Style:
      Element:
        attributes:
          type:
            Value: text/css
        children:
          - Style:
              Comment: Header styles
          - Text: ".header "
          - Text: "{"
          - Text: "color: blue;"
          - Text: "}"
